@@ -68,6 +68,7 @@ AMCP
     to know exactly what asynchronous response matched a specific request.
   o Added support for listing contents of a specific directory for CLS, TLS,
     DATA LIST and THUMBNAIL LIST.
+  o Fixed bug where CINF only returned the first match.
 
 
 
